--- a/configsync/system.site.yml
+++ b/configsync/system.site.yml
@@ -1,5 +1,5 @@
 uuid: 77536548-9dd3-4752-b7c3-aef93731de18
-name: 'Boston 311 Reports'
+name: 'Boston 311 Archive'
 mail: balsam.adam@gmail.com
 slogan: ''
 page:
